# mcp-server-spotinst

./: .env.example  CHANGELOG.md  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/mcp_server_spotinst/: server.py  spotinst_client.py
tests/: test_client.py  test_server.py
tests/integration/: conftest.py  test_vng_matrix.py
