[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-server-spotinst"
version = "0.1.0"
description = "MCP server for Spot.io (Spotinst) API - manage Ocean clusters, VNGs, and Elastigroups"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["mcp", "spotinst", "spot.io", "ocean", "kubernetes", "cloud"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
]

[project.urls]
Homepage = "https://github.com/amendez-primer/mcp-server-spotinst"
Repository = "https://github.com/amendez-primer/mcp-server-spotinst"

[project.scripts]
mcp-server-spotinst = "mcp_server_spotinst.server:main"
