[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-server-spotinst"
version = "0.1.0"
description = "MCP server for Spot.io (Spotinst) API - manage Ocean clusters, VNGs, and Elastigroups"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["mcp", "spotinst", "spot.io", "ocean", "kubernetes", "cloud"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.21.0",
]

[project.urls]
Homepage = "https://github.com/amendez-primer/mcp-server-spotinst"
Repository = "https://github.com/amendez-primer/mcp-server-spotinst"

[project.scripts]
mcp-server-spotinst = "mcp_server_spotinst.server:main"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.10"
